added chart to movie detail showing tickets sales

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h2>Buy some movies</h2>
+                <h2>A new week, a new selections of movies!</h2>
             </div>
             <div class="modal-body text-center">
                 <div class="container">
@@ -433,7 +433,8 @@
                                     </tfoot>
                                 </table>
 
-                                <h3>Ticket sales over time</h3>
+                                <h2>Ticket sales over time</h2>
+                                <div class="chart" id="chart-movie-over-time"></div>
                             </div>
                     </div>
                 </div>
