implemented primitive free tickets

--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                     <li class="nav-item">
                         <a class="nav-link active" id="financal-report-tab" data-toggle="tab"
                            href="#financal-report" role="tab" aria-controls="financal-report"
-                           aria-selected="true">General statistics</a>
+                           aria-selected="true">Accounting</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" id="general-statistics-tab" data-toggle="tab"
