--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
             </button>
         </td>
         <td>
-            <button rel="prices" class="btn btn-primary top-menu" data-toggle="modal" data-target="#pricesModal">Prices</button>
+            <button rel="prices" class="btn btn-primary top-menu" data-toggle="modal" data-target="#pricesModal">
+                Prices
+            </button>
         </td>
         <td>
             <button rel="statistics" class="btn btn-primary top-menu" id="statisticsModalButton">Statistics
@@ -295,7 +297,7 @@
 <!-- Facilities Build Menu Modal -->
 <div class="modal fade" id="facilitiesModal" tabindex="-1" role="dialog" aria-labelledby="ModalCenterTitle"
      aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">Facilities</h5>
@@ -311,10 +313,33 @@
                 </div>
 
                 <template id="build-facilities-template">
-                    <div class="col-sm">
-                        <!--                        TODO add more info?-->
-                        <button class="build-facility btn btn-primary">Build <span class="facility-type"></span>
-                        </button>
+                    <div class="col-sm" style="margin-bottom: 10px;">
+                        <div style="min-height: 300px;">
+                            <h3 class="build-facilities-name"></h3>
+
+                            <table class="table table-striped table-bordered">
+                                <tr>
+                                    <th>Building cost</th>
+                                    <td class="build-facilities-build-cost"></td>
+                                </tr>
+                                <tr>
+                                    <th>Capacity/Cashier:</th>
+                                    <td class="build-facilities-capacity"></td>
+                                </tr>
+                                <tr>
+                                    <th>Maintenance cost</th>
+                                    <td class="build-facilities-maintenance"></td>
+                                </tr>
+                                <tr>
+                                    <th>Cashier wages</th>
+                                    <td class="build-facilities-wages"></td>
+                                </tr>
+                            </table>
+                        </div>
+                        <div class="center">
+                            <button class="build-facility btn btn-primary">Build <span
+                                    class="build-facilities-type"></span></button>
+                        </div>
                     </div>
                 </template>
             </div>
@@ -443,8 +468,8 @@
                     <template id="price-manager-row-template">
                         <tr>
                             <td class="price-manager-product-name"></td>
-                            <td >
-                                <input type="number" class="price-manager-product-price"  step="0.50" />
+                            <td>
+                                <input type="number" class="price-manager-product-price" step="0.50"/>
                                 <p class="error hide"></p>
                             </td>
                             <td class="price-manager-product-cost"></td>
@@ -655,40 +680,23 @@
 
     <!--    facilities-->
     <hr>
-    <div id="facility-container">
+    <div id="facility-container" class="row">
 
-        <!--    toilet-->
-        <h5>Toilet</h5>
-        <div id="toilet-container"></div>
+        <template id="facility-template">
+            <div class="col-sm-3">
+                <div class="facility-box">
+                    <h3 class="facility-name"></h3>
 
-        <!--    Arcade-->
-        <h5>Arcade</h5>
-        <div id="arcade-container"></div>
+                    <input type="range" class="slider facility-slider">
 
-        <template id="toilet-template">
-            <div class="toilet">
-                <h6>Toilet #<span class="toilet-id"></span></h6>
-                <p>Cashiers : <span class="toilet-cashiers"></span></p>
-                <p>Availability : <span class="toilet-customers"></span> / <span class="toilet-capacity"></span></p>
-                <p>fee : <span class="toilet-selling-price"></span></p>
-                <button class="manage-toilet">Manage</button>
-            </div>
-        </template>
+                    <p>Capacity : <span class="facility-customers"></span> / <span class="facility-capacity"></span></p>
 
-        <template id="arcade-template">
-            <div class="arcade">
-                <h6>Arcade</h6>
-                <h6>Arcade : #<span class="arcade-id"></span></h6>
-                <p>Cashiers : <span class="arcade-cashiers"></span></p>
-                <p>Availability : <span class="arcade-customers"></span> / <span class="arcade-capacity"></span></p>
-                <p>fee : <span class="arcade-selling-price"></span></p>
-                <button class="manage-arcade">Manage</button>
-
+                    <p>Daily profit: <span class="facility-daily-profit"></span></p>
+                </div>
             </div>
         </template>
 
     </div>
-
 </div>
 
 <div id="customer-detail-panel">
