Customers are going shopping

--- a/index.html
+++ b/index.html
@@ -632,6 +632,9 @@
     <div class="ai-area" id="buying-ticket-area">
         <h2>Buying ticket</h2>
     </div>
+    <div class="ai-area" id="shopping-area">
+        <h2>Shopping</h2>
+    </div>
     <div class="ai-area" id="watching-movie-area">
         <h2>Watching movie</h2>
     </div>
@@ -719,9 +722,8 @@
 
     <p><i class="fa fa-euro-sign"></i> <span class="customer-money-spent"></span></p>
 
-    <p><i class="fa fa-ticket-alt"></i> <span class="customer-ticket"></span></p>
-
     <ul class="customer-thoughts"></ul>
+    <ul class="customer-inventory"></ul>
 </div>
 
 <progress max="100" value="0" id="research-progress-bar"></progress>
