Added logging for customer

--- a/index.html
+++ b/index.html
@@ -707,6 +707,8 @@
         <span aria-hidden="true">×</span>
     </button>
 
+    <button class="btn btn-danger" id="toggle-logging">Toggle logging <em>off</em></button>
+
     <h3>
         <i class="fa fa-female"></i>
         <i class="fa fa-male"></i>
