--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
         <span aria-hidden="true">×</span>
     </button>
 
-    <button class="btn btn-danger" id="toggle-logging">Toggle logging <em>off</em></button>
+    <button class="btn btn-danger" id="toggle-logging">Toggle logging <em>on</em></button>
 
     <h3>
         <i class="fa fa-female"></i>
